--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -196,11 +196,11 @@
     "description": "Shows a notification when Gesturefy is updated."
   },
   "gestureCreateNewButton": {
-    "message": "New Gesture",
+    "message": "Nouveau geste",
     "description": "New Gesture"
   },
   "gestureSearchPlaceholder": {
-    "message": "Search gestures",
+    "message": "Rechercher des gestes",
     "description": "Search gestures"
   },
   "gestureHintNoSearchResults": {
