--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -62,6 +62,18 @@
     "message": "middle",
     "description": "middle"
   },
+  "settingLabelMatchingAlgorithm": {
+    "message": "Matching algorithm",
+    "description": "Matching algorithm"
+  },
+  "settingLabelMatchingAlgorithmStrict": {
+    "message": "Strict",
+    "description": "Strict"
+  },
+  "settingLabelMatchingAlgorithmShapeIndependent": {
+    "message": "Shape-Independent",
+    "description": "Shape-Independent"
+  },
   "settingLabelTimeoutActive": {
     "message": "Activate idle timeout",
     "description": "Activate idle timeout"
@@ -152,6 +164,14 @@
   "settingDescriptionMouseButton": {
     "message": "Captures a new mouse gesture while the button is held down.",
     "description": "Captures a new mouse gesture while the button is held down."
+  },
+  "settingDescriptionMatchingAlgorithm": {
+    "message": "Determines how the gestures are compared to find the best matching gesture.",
+    "description": "Determines how the gestures are compared to find the best matching gesture."
+  },
+  "settingDescriptionMatchingAlgorithmLink": {
+    "message": "Learn about the differences here",
+    "description": "Learn about the differences here"
   },
   "settingDescriptionTimeoutActive": {
     "message": "Cancels the gesture after the mouse has not been moved for the specified time.",
